--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,12 @@
     "debug": "^2.6.8",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
-    "jade": "^1.11.0",
     "migrate": "^0.2.3",
     "morgan": "^1.8.2",
     "pg": "^6.2.4",
     "pg-native": "^1.10.1",
-    "pg-promise": "^5.9.3"
+    "pg-promise": "^5.9.3",
+    "pug": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
