--- a/.gitignore
+++ b/.gitignore
@@ -156,7 +156,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+#.env
 
 
 # End of https://www.gitignore.io/api/node,macos,jetbrains
